# cpt_project_files

./: LICENSE  README.md  cpt_dropoffmode.m  cpt_startupmode.m
MATLAB/: cpt_carrymode.m  cpt_gatekeeper.m  cpt_sat_i.m  cpt_sat_o.m  cpt_toplevel.m
cpt_sitl_pkg/: CMakeLists.txt  joint_angle_plugin.cc  package.xml
cpt_sitl_pkg/launch/: joystick_flight.launch  mavros_posix_sitl_2.launch  multiuav_demo.launch  pendulum.launch  posix_sitl_2.launch
cpt_sitl_pkg/models/iris_2/: iris.sdf  model.config
cpt_sitl_pkg/models/iris_2/original/: iris.sdf2
cpt_sitl_pkg/scripts/: multiuav_setpoints.py  singleuav_setpoints.py
cpt_sitl_pkg/worlds/: pendulum.world
